--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-jhipster-react-native",
-  "version": "4.0.0-beta.1",
+  "version": "4.0.0",
   "description": "React Native Blueprint for existing JHipster Apps",
   "keywords": [
     "yeoman-generator",
