--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -33,6 +33,7 @@
     "yup": "0.32.9"
   },
   "devDependencies": {
+    "expo-cli": "4.2.1",
     "@storybook/addons": "5.3.21",
     "@storybook/react-native": "5.3.25",
     "@storybook/theming": "5.3.21",
