--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        jhipster_version: [beta, 6]
+        jhipster_version: [7, 6]
         node_version: [14.x]
         app_type:
           - OauthDtoApp
