--- a/.github/workflows/sample-app.yml
+++ b/.github/workflows/sample-app.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        jhipster_version: [beta]
+        jhipster_version: [7]
         node_version: [14.15.0]
         os: [ubuntu-latest]
     env:
