--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "prettier": "2.3.0",
     "sinon": "10.0.0",
     "yeoman-assert": "3.1.1",
-    "yeoman-test": "5.1.0"
+    "yeoman-environment": "3.4.1",
+    "yeoman-test": "6.1.0"
   },
   "engines": {
     "node": ">=14",
