add mem-fs as a direct dependency
weird issue in tests where it doesn't get installed for some reason
maybe related to the npm bug found in jhipster?

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "husky": "6.0.0",
     "jsdoc": "3.6.7",
     "lint-staged": "11.0.0",
+    "mem-fs": "2.2.1",
     "mocha": "8.4.0",
     "np": "7.5.0",
     "prettier": "2.3.0",
