--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -3,8 +3,12 @@ on:
   workflow_dispatch:
     inputs:
       recordVideo:
-        description: 'Record E2E Tests'
-        required: true
+        description: 'Record failing E2E Tests'
+        required: false
+        default: 'false'
+      screenshots:
+        description: 'Screenshot failing E2E Tests'
+        required: false
         default: 'false'
   push:
     branches:
@@ -58,6 +62,7 @@ jobs:
       SCRIPT_DIR: ./test/scripts
       PLATFORM: ios
       JHI_RECORD_VIDEO: ${{ github.event.inputs.recordVideo || 'false' }}
+      JHI_SCREENSHOTS: ${{ github.event.inputs.screenshots || 'false' }}
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-java@v2
@@ -91,6 +96,8 @@ jobs:
         name: 'GENERATING: generate react-native app'
       - run: $SCRIPT_DIR/run-detox-tests.sh
         name: 'TESTING: run detox tests'
+      - run: $SCRIPT_DIR/rename-detox-screenshots.sh
+        name: 'TESTING: rename detox screenshots to a valid filename'
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
         with:
