--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -49,8 +49,8 @@ jobs:
       - uses: actions/setup-node@v2.2.0
         with:
           node-version: ${{ matrix.node_version }}
-      - name: Config git variables
-        run: $SCRIPT_DIR/git-config.sh
+      - run: $SCRIPT_DIR/git-config.sh
+        name: Config git variables
       - run: $SCRIPT_DIR/install-node-dependencies.sh
         name: 'TOOLS: install node dependencies'
       - run: npm i && npm link
