--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -13,6 +13,7 @@ on:
   push:
     branches:
       - main
+      - dependencies
   pull_request:
 defaults:
   run:
@@ -64,7 +65,7 @@ jobs:
       JHI_RECORD_VIDEO: ${{ github.event.inputs.recordVideo || 'false' }}
       JHI_SCREENSHOTS: ${{ github.event.inputs.screenshots || 'false' }}
     steps:
-      - uses: actions/checkout@v2.3.5
+      - uses: actions/checkout@v2.4.0
       - uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
@@ -77,7 +78,7 @@ jobs:
         name: Config git variables
       - run: $SCRIPT_DIR/install-node-dependencies.sh
         name: 'TOOLS: install node dependencies'
-      - uses: nick-invision/retry@v2.5.0
+      - uses: nick-invision/retry@v2.5.1
         name: 'TOOLS: installing Detox and its dependencies'
         with:
           max_attempts: 3
