--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -9,14 +9,14 @@ defaults:
     shell: bash
 jobs:
   generate:
-    name: e2e-${{ matrix.app_type }}-${{ matrix.jhipster_version }}
+    name: app-tests-${{ matrix.app_type }}-${{ matrix.jhipster_version }}
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]') && !contains(github.event.ref_type, '[tag]')"
     timeout-minutes: 60
     strategy:
       fail-fast: false
       matrix:
-        jhipster_version: [7, 6]
+        jhipster_version: [7.3.1, 6]
         node_version: [14.x]
         app_type:
           - OauthDtoApp
