--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "lodash": "4.17.21",
     "pluralize": "8.0.0",
     "semver": "7.3.5",
-    "shelljs": "0.8.4"
+    "shelljs": "0.8.4",
+    "yeoman-environment": "^3.8.0"
   },
   "devDependencies": {
     "chai": "4.3.4",
