--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -58,6 +58,9 @@
     "typescript": "4.4.4",
     "prettier": "2.4.1",
     "patch-package": "6.4.7",
+    "path-exists": "5.0.0",
+    "resolve": "1.20.0",
+    "tapable": "2.2.1",
     "rimraf": "3.0.2"
   }
 }
