--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -3,10 +3,17 @@ on:
   workflow_dispatch:
   push:
     branches:
+      - '*'
+      - '!dependabot/**'
   pull_request:
 defaults:
   run:
     shell: bash
+concurrency:
+  # Group by workflow and ref, limit to 1 for pull requests
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ startsWith(github.ref, 'refs/pull/') || github.run_number }}
+  # Cancel intermediate pull request builds
+  cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 jobs:
   lint-and-test:
     runs-on: ${{ matrix.os }}
