--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -57,6 +57,7 @@
     "mockery": "2.1.0",
     "typescript": "4.5.3",
     "prettier": "2.5.1",
+    "react-test-renderer": "18.2.0",
     "patch-package": "6.4.7",
     "path-exists": "5.0.0",
     "resolve": "1.20.0",
