--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   generate:
     name: app-tests-${{ matrix.app_type }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]') && !contains(github.event.ref_type, '[tag]')"
     timeout-minutes: 60
     strategy:
