--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         node_version: [16.x]
-        os: [ubuntu-22.04]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3.0.2
       - uses: actions/setup-node@v2.5.0
