--- a/.github/workflows/sample-app.yml
+++ b/.github/workflows/sample-app.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         jhipster_version: [7]
         node_version: [16.17.0]
-        os: [ubuntu-22.04]
+        os: [ubuntu-latest]
     env:
       SCRIPT_DIR: ./generator-jhipster-react-native/test/scripts
       OS: ${{ matrix.os }}
