--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "expo": "46.0.20",
-    "@expo/webpack-config": "0.17.0",
+    "expo-cli": "6.0.5",
     "@storybook/addons": "5.3.21",
     "@storybook/react-native": "5.3.25",
     "@storybook/theming": "5.3.21",
