--- a/.github/workflows/sample-app.yml
+++ b/.github/workflows/sample-app.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         jhipster_version: [7]
-        node_version: [16.17.0]
+        node_version: [18.x]
         os: [ubuntu-latest]
     env:
       SCRIPT_DIR: ./generator-jhipster-react-native/test/scripts
@@ -31,11 +31,11 @@ jobs:
       EXPO_TOKEN: ${{ secrets.EXPO_TOKEN || '' }}
       JHIPSTER_VERSION: ${{ matrix.jhipster_version }}
     steps:
-      - uses: actions/checkout@v3.5.2
+      - uses: actions/checkout@v3
         name: 'SETUP: checkout generator-react-native'
         with:
           path: generator-jhipster-react-native
-      - uses: actions/checkout@v3.5.2
+      - uses: actions/checkout@v3
         name: 'SETUP: checkout jhipster-sample-app-react-native'
         with:
           token: ${{ secrets.SAMPLE_GITHUB_TOKEN || github.token }}
@@ -43,7 +43,7 @@ jobs:
           path: sample-app
       - name: 'SETUP: git history'
         run: cd generator-jhipster-react-native && git --no-pager log -n 10 --graph --pretty='%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue) <%an>%Creset' --abbrev-commit
-      - uses: actions/setup-node@v3.6.0
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node_version }}
       - name: 'TOOLS: configure git'
