--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -17,6 +17,7 @@
     "querystringify": "2.2.0",
     "ramda": "0.29.0",
     "react-datepicker": "4.13.0",
+    "react-dom": "18.2.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-modal-datetime-picker": "15.0.1",
     "react-native-picker-select": "8.0.4",
