replace enzyme with testing-library

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -38,13 +38,13 @@
     "@storybook/addons": "7.0.24",
     "@storybook/react-native": "6.5.4",
     "@storybook/theming": "7.0.24",
+    "@testing-library/jest-native": "5.4.2",
+    "@testing-library/react-native": "12.1.2",
     "babel-jest": "29.5.0",
     "babel-preset-env": "1.7.0",
     "buffer": "6.0.3",
     "create-expo-app": "2.0.3",
     "detox": "20.9.1",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.7",
     "eslint": "8.43.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
