--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "pluralize": "8.0.0",
     "semver": "7.5.4",
     "shelljs": "0.8.5",
-    "yeoman-environment": "^3.10.0"
+    "yeoman-environment": "3.19.3"
   },
   "devDependencies": {
     "chai": "4.3.7",
@@ -83,5 +83,8 @@
   "engines": {
     "node": ">=14",
     "npm": ">=7"
+  },
+  "overrides": {
+    "yeoman-environment": "3.19.3"
   }
 }
