--- a/generators/app/resources/expo/package.json
+++ b/generators/app/resources/expo/package.json
@@ -2,27 +2,32 @@
   "name": "expo-dependencies",
   "version": "0.0.1",
   "description": "Dependencies managed by Expo - need a specific version",
+  "scripts": {
+    "update-dependencies": "npm install && npx expo install --fix && rm -rf package-lock.json node_modules"
+  },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.19.1",
-    "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-community/masked-view": "0.2.8",
-    "@react-native-picker/picker": "2.4.8",
-    "expo-auth-session": "~3.7.1",
-    "expo-constants": "~14.2.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-native-picker/picker": "2.4.10",
+    "expo-auth-session": "~5.0.2",
+    "expo-constants": "~14.4.2",
     "expo-image-picker": "~14.3.2",
-    "expo-linking": "~4.0.1",
-    "expo-random": "~12.3.0",
-    "expo-splash-screen": "~0.18.2",
-    "expo-web-browser": "~11.0.0",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~3.4.1",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "^0.18.9"
+    "expo-linking": "~5.0.2",
+    "expo-random": "~13.2.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-web-browser": "~12.3.2",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
+    "expo": "49.0.6",
     "expo-template-blank-typescript": "49.0.14",
-    "jest-expo": "^49.0.0"
+    "jest-expo": "^49.0.0",
+    "typescript": "^5.1.3"
   }
 }
