--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/devtools": "6.0.19",
-    "@react-navigation/drawer": "5.12.5",
-    "@react-navigation/native": "5.9.4",
-    "@react-navigation/stack": "5.14.5",
+    "@react-navigation/drawer": "6.6.3",
+    "@react-navigation/native": "6.1.7",
+    "@react-navigation/stack": "6.3.17",
     "apisauce": "3.0.1",
     "format-json": "1.0.3",
     "formik": "2.4.3",
@@ -49,7 +49,6 @@
     "eslint-config-prettier": "8.9.0",
     "eslint-plugin-prettier": "4.2.1",
     "expect": "29.6.2",
-    "expo": "49.0.6",
     "expo-detox-hook": "1.0.10",
     "jest": "29.6.2",
     "jest-circus": "29.6.2",
@@ -62,7 +61,6 @@
     "redux-devtools-extension": "2.13.9",
     "resolve": "1.22.2",
     "rimraf": "5.0.1",
-    "tapable": "2.2.1",
-    "typescript": "4.9.4"
+    "tapable": "2.2.1"
   }
 }
