--- a/.github/workflows/sample-app.yml
+++ b/.github/workflows/sample-app.yml
@@ -67,7 +67,7 @@ jobs:
           jhipster --no-insight --skip-checks --skip-install --force --with-entities
           # jhipster heroku --no-insight --skip-install --force --skip-deploy
           # sed -i.backup "s~http://localhost:8080/~https://jh-sample-app-react-native-api.herokuapp.com/~g" app/config/app-config.js
-          rm app/config/app-config.js.backup
+          # rm app/config/app-config.js.backup
           rm -rf package-lock.json node_modules
           npm install
           git add .
