add resources/expo to dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,14 @@ updates:
       day: 'wednesday'
     open-pull-requests-limit: 30
     versioning-strategy: increase
+  - package-ecosystem: 'npm'
+    directory: '/generators/app/resources/expo/'
+    schedule:
+      interval: 'weekly'
+      # Check for npm updates on Wednesday due to Expo updates
+      day: 'wednesday'
+    open-pull-requests-limit: 30
+    versioning-strategy: increase
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
