--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -38,3 +38,7 @@ jobs:
         run: npm ci
       - name: lint and test
         run: npm run test
+      - name: check-dependencies
+        run: |
+          cd generators/app/resources/expo
+          npm run check-dependencies
