--- a/generators/app/resources/expo/package.json
+++ b/generators/app/resources/expo/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Dependencies managed by Expo - need a specific version",
   "scripts": {
+    "check-dependencies": "npm install && npx expo install --check",
     "update-dependencies": "npm install && npx expo install --fix && rm -rf package-lock.json node_modules"
   },
   "dependencies": {
