--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,35 +8,30 @@
     "ecmaVersion": 11,
     "sourceType": "module"
   },
-  "rules": {
-    "prettier/prettier": "error",
-    "indent": [2, 2, { "SwitchCase": 1 }],
-    "linebreak-style": 0,
-    "eol-last": 2,
-    "quotes": [2, "single", { "avoidEscape": true }],
-    "semi": [2, "always"],
-    "eqeqeq": [2, "smart"],
-    "no-use-before-define": [2, "nofunc"],
-    "no-unused-vars": [2, { "vars": "local", "args": "none" }],
-    "no-multi-str": 2,
-    "no-irregular-whitespace": 2,
-    "comma-dangle": "off",
-    "max-len": "off",
-    "func-names": "off",
-    "class-methods-use-this": "off",
-    "no-underscore-dangle": "off",
-    "no-plusplus": "off",
-    "no-unused-expressions": [2, { "allowShortCircuit": true, "allowTernary": true }],
-    "prefer-destructuring": "off",
-    "no-multi-assign": "off",
-    "no-param-reassign": "off",
-    "no-shadow": "off",
-    // remove later
-    "no-console": "off"
-  },
   "overrides": [
     {
       "files": ["**/*.spec.{c,m,}js", "test/**/*.{c,m,}js"]
     }
-  ]
+  ],
+  "rules": {
+    "func-names": "off",
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "import/no-unresolved": "off",
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "ForInStatement",
+        "message": "for..in loops iterate over the entire prototype chain, which is virtually never what you want. Use Object.{keys,values,entries}, and iterate over the resulting array."
+      },
+      {
+        "selector": "LabeledStatement",
+        "message": "Labels are a form of GOTO; using them makes code confusing and hard to maintain and understand."
+      },
+      {
+        "selector": "WithStatement",
+        "message": "`with` is disallowed in strict mode because it makes code impossible to predict and optimize."
+      }
+    ],
+    "no-shadow": "off"
+  }
 }
