--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "chalk": "4.1.2",
     "fs-extra": "11.2.0",
     "generator-jhipster": "8.1.0",
-    "lodash": "4.17.21",
+    "lodash-es": "4.17.21",
     "pluralize": "8.0.0",
     "semver": "7.5.4",
     "shelljs": "0.8.5",
