--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,14 @@
     "func-names": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "import/no-unresolved": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "mjs": "always"
+      }
+    ],
+    "ristricted-exports": "off",
     "no-restricted-syntax": [
       "error",
       {
