adjust ios e2e ci

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        jhipster_version: [7]
+        jhipster_version: [8]
         node_version: [20.x]
         app_type:
           - JwtDtoApp
@@ -61,6 +61,7 @@ jobs:
             dto: false
     env:
       JHI_REACT_NATIVE_APP_NAME: ${{ matrix.app_type }}
+      JHI_REACT_NATIVE_CLIENT_DIR: client
       JHI_AUTH_TYPE: ${{ matrix.auth_type }}
       JHI_DTO: ${{ matrix.dto }}
       JHI_WEBSOCKETS: ${{ matrix.websockets }}
