--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -12,8 +12,7 @@ on:
         default: 'false'
   push:
     branches:
-      - '*'
-      - '!dependabot/**'
+      - 'main'
   pull_request:
 defaults:
   run:
