--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -112,7 +112,7 @@ jobs:
         with:
           name: expo-app-${{ matrix.app_type }}-${{ matrix.jhipster_version }}
           path: |
-            ${{ runner.workspace }}/${{ matrix.app_type }}/
+            ${{ runner.workspace }}/${{ matrix.app_type }}/**/*
             !${{ runner.workspace }}/${{ matrix.app_type }}/node_modules
             !${{ runner.workspace }}/${{ matrix.app_type }}/e2e/Exponent.app
   ios-result:
