--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -28,6 +28,9 @@ jobs:
     runs-on: macos-13
     if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]') && !contains(github.event.ref_type, '[tag]')"
     timeout-minutes: 90
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}/app
     strategy:
       fail-fast: false
       matrix:
@@ -70,17 +73,22 @@ jobs:
       JHI_RECORD_VIDEO: ${{ github.event.inputs.recordVideo || 'false' }}
       JHI_SCREENSHOTS: ${{ github.event.inputs.screenshots || 'false' }}
     steps:
-      - uses: actions/checkout@v4.1.1
+      - uses: jhipster/actions/create-app-path@v0
+      - uses: jhipster/actions/setup-git@v0
+      - uses: jhipster/actions/restore-cache@v0
+        with:
+          npm: true
+      - uses: actions/checkout@v4
+        with:
+          path: generator-jhipster-react-native
+          fetch-depth: 2
       - uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
+          distribution: 'temurin'
           java-version: '21.x'
-      - run: git --no-pager log -n 10 --graph --pretty='%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue) <%an>%Creset' --abbrev-commit
       - uses: actions/setup-node@v4.0.2
         with:
           node-version: ${{ matrix.node_version }}
-      - run: $SCRIPT_DIR/git-config.sh
-        name: Config git variables
       - run: $SCRIPT_DIR/install-node-dependencies.sh
         name: 'TOOLS: install node dependencies'
       - uses: maxim-lobanov/setup-xcode@v1
@@ -97,8 +105,10 @@ jobs:
         name: 'TOOLS: display tools'
       - run: npm i && npm link
         name: 'TOOLS: npm install and link in generator-jhipster-react-native'
+        working-directory: ${{ github.workspace }}/generator-jhipster-react-native
       - run: $SCRIPT_DIR/copy-jdl-file.sh
         name: 'SETUP: copy the JDL file for the backend and app'
+        working-directory: ${{ github.workspace }}/generator-jhipster-react-native
       - run: $SCRIPT_DIR/generate-jhipster-backend.sh
         name: 'GENERATING: generate jhipster backend'
       - run: $SCRIPT_DIR/generate-react-native-app.sh
