--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -113,11 +113,17 @@ jobs:
         name: 'GENERATING: generate jhipster backend'
       - run: $SCRIPT_DIR/generate-react-native-app.sh
         name: 'GENERATING: generate react-native app'
+      - uses: actions/setup-node@v4.0.2
+        with:
+          node-version: '16.x'
       - uses: jhipster/actions/compare-sample@v0
         with:
           generator-path: generator-jhipster-react-native
           current-application-path: ${{ github.workspace }}/client
           cmd: rnhipster jdl ${{ github.workspace }}/*.jdl --standalone --skip-jhipster-dependencies --force --skip-install
+      - uses: actions/setup-node@v4.0.2
+        with:
+          node-version: ${{ matrix.node_version }}
       - run: $SCRIPT_DIR/run-detox-tests.sh
         name: 'TESTING: run detox tests'
       - run: $SCRIPT_DIR/rename-detox-screenshots.sh
