--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -121,7 +121,7 @@ jobs:
           generator-path: generator-jhipster-react-native
           application-path: ${{ github.workspace }}/client-base
           current-application-path: ${{ github.workspace }}/client
-          cmd: rnhipster jdl ${{ github.workspace }}/*.jdl --skip-jhipster-dependencies --force --skip-install
+          cmd: rnhipster jdl ${{ github.workspace }}/*.jdl --defaults --skip-jhipster-dependencies --force --skip-install
       - uses: actions/setup-node@v4.0.2
         with:
           node-version: ${{ matrix.node_version }}
