--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,8 +16,7 @@ updates:
         patterns:
           - '@reduxjs/*'
           - '*-redux'
-          - 'redux'
-          - 'redux-*'
+          - 'redux*'
       storybook:
         patterns:
           - '@storybook/*'
@@ -37,11 +36,14 @@ updates:
           - '@react-native-masked-view/masked-view'
           - '@react-native-picker/picker'
           - 'expo-auth-session'
+          - 'expo-constants'
           - 'expo-image-picker'
           - 'expo-linking'
           - 'expo-random'
           - 'expo-splash-screen'
+          - 'expo-status-bar'
           - 'expo-web-browser'
+          - 'jest-expo'
           - 'react-native-gesture-handler'
           - 'react-native-reanimated'
           - 'react-native-safe-area-context'
