--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -119,7 +119,7 @@ jobs:
           generator-path: generator-jhipster-react-native
           application-path: ${{ github.workspace }}/client-base
           current-application-path: ${{ github.workspace }}/client
-          cmd: rnhipster jdl ${{ github.workspace }}/*.jdl --defaults --skip-jhipster-dependencies --force --skip-install
+          cmd: rnhipster jdl ${{ github.workspace }}/*.jdl --defaults --skip-jhipster-dependencies --force --skip-install --standalone
       - run: $SCRIPT_DIR/run-detox-tests.sh
         name: 'TESTING: run detox tests'
       - run: $SCRIPT_DIR/rename-detox-screenshots.sh
