--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -115,6 +115,7 @@ jobs:
         name: 'GENERATING: generate react-native app'
       - uses: jhipster/actions/compare-sample@v0
         continue-on-error: true
+        if: false
         with:
           generator-path: generator-jhipster-react-native
           application-path: ${{ github.workspace }}/client-base
